--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         const s4 = new Segment(p2, p3);
 
         const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3, s4]);
-        const grpahEditor = new grpahEditor(myCanvas, graph);
+        const graphEditor = new graphEditor(myCanvas, graph);
 
         animate();
 
         function animate(){
             ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-            grpahEditor.display();
+            graphEditor.display();
             requestAnimationFrame(animate);
         }
     </script>
