--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div id="controls">
         <button onclick="dispose()">🗑</button>
         <button onclick="save()">&#128708;</button>
+        &nbsp;
+        <button id="graphBtn" onclick="setMode('graph')">🌎</button>
+        <button id="stopBtn" onclick="setMode('stop')">🛑</button>
     </div>
 
     <script src="js/world.js"></script>
@@ -39,8 +42,12 @@
 
         const viewport = new Viewport(myCanvas);
         const graphEditor = new GraphEditor(viewport, graph);
+        const stopEditor = new StopEditor(viewport, world);
 
         let oldGraphHash = graph.hash(); //avoiding generate the graph concurrently
+
+        setMode("graph");
+
         animate();
 
         function animate(){
@@ -53,6 +60,7 @@
             world.draw(ctx, viewPoint);
             ctx.globalAlpha = 0.3;
             graphEditor.display();            
+            stopEditor.display();            
             requestAnimationFrame(animate);
         }
 
@@ -62,6 +70,31 @@
 
         function save(){
             localStorage.setItem("graph", JSON.stringify(graph));
+        }
+
+        function setMode(mode) {
+            dissableEditors();
+            switch (mode) {
+                case "graph":
+                    graphBtn.style.backgroundColor = "white";
+                    graphBtn.style.filter = "";
+                    graphEditor.enable();
+                    break;
+                case "stop":
+                    stopBtn.style.backgroundColor = "white";
+                    stopBtn.style.filter = "";
+                    stopEditor.enable();
+                    break;
+            }
+        }
+
+        function dissableEditors() {
+            graphBtn.style.backgroundColor = "gray";
+            graphBtn.style.filter = "grayscale(100%)";
+            graphEditor.disable();
+            stopBtn.style.backgroundColor = "gray";
+            stopBtn.style.filter = "grayscale(100%)";
+            stopEditor.disable();
         }
     </script>
 </body>
