--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     </div>
 
     <script src="js/world.js"></script>
-    <script src="js/graphEditor.js"></script>
-    <script src="js/viewport.js"></script>
+    <script src="js/viewport.js"></script>    
+    <script src="js/editors/graphEditor.js"></script>
+    <script src="js/editors/stopEditor.js"></script>
     <script src="js/items/tree.js"></script>
     <script src="js/items/building.js"></script>
     <script src="js/math/utils.js"></script>
