--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
         &nbsp;
         <button id="graphBtn" onclick="setMode('graph')">🌎</button>
         <button id="stopBtn" onclick="setMode('stop')">🛑</button>
+        <button id="crossingBtn" onclick="setMode('crossing')">🚶</button>
     </div>
 
     <script src="js/world.js"></script>
     <script src="js/viewport.js"></script>    
+    <script src="js/markings/stop.js"></script>    
+    <script src="js/markings/stop.js"></script>    
     <script src="js/editors/graphEditor.js"></script>
     <script src="js/editors/stopEditor.js"></script>
+    <script src="js/editors/crossingEditor.js"></script>
     <script src="js/items/tree.js"></script>
     <script src="js/items/building.js"></script>
     <script src="js/math/utils.js"></script>
@@ -44,6 +48,7 @@
         const viewport = new Viewport(myCanvas);
         const graphEditor = new GraphEditor(viewport, graph);
         const stopEditor = new StopEditor(viewport, world);
+        const crossingEditor = new CrossingEditor(viewport, world);
 
         let oldGraphHash = graph.hash(); //avoiding generate the graph concurrently
 
@@ -62,11 +67,13 @@
             ctx.globalAlpha = 0.3;
             graphEditor.display();            
             stopEditor.display();            
+            crossingEditor.display();            
             requestAnimationFrame(animate);
         }
 
         function dispose(){
             graphEditor.dispose();
+            world.markings.length = 0;
         }
 
         function save(){
@@ -86,6 +93,11 @@
                     stopBtn.style.filter = "";
                     stopEditor.enable();
                     break;
+                case "crossing":
+                    crossingBtn.style.backgroundColor = "white";
+                    crossingBtn.style.filter = "";
+                    crossingEditor.enable();
+                    break;
             }
         }
 
@@ -96,6 +108,9 @@
             stopBtn.style.backgroundColor = "gray";
             stopBtn.style.filter = "grayscale(100%)";
             stopEditor.disable();
+            crossingBtn.style.backgroundColor = "gray";
+            crossingBtn.style.filter = "grayscale(100%)";
+            crossingEditor.disable();
         }
     </script>
 </body>
