--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <button id="stopBtn" onclick="setMode('stop')">🛑</button>
         <button id="crossingBtn" onclick="setMode('crossing')">🚶</button>
         <button id="startBtn" onclick="setMode('start')">🚗</button>
+        <button id="parkingBtn" onclick="setMode('parking')">🅿️</button>
+        <button id="lightBtn" onclick="setMode('light')">🚦</button>
+        <button id="targetBtn" onclick="setMode('target')">🎯</button>
+        <button id="yieldBtn" onclick="setMode('yield')">⚠️</button>
     </div>                                                          
 
     <script src="js/world.js"></script>
